--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,12 @@
-<h1>Welcome to {{title}}!</h1>
+<!--8.77.1 Add nav bar tag ->nav-bar.html-->
+<app-nav-bar></app-nav-bar>
+<!--8.79.1 Add html ->app.module.ts-->
+<div class="container" style="margin-top: 140px;">
+    <h1>Welcome to {{title}}</h1>
+    <!--8.80.1 Add code for showing products -> -->
+    <ul>
+        <li class="list-unstyled" *ngFor="let product of products">
+            {{product.name}}
+        </li>
+    </ul>
+</div>
