pagination works on products

--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,6 +1,6 @@
 <!--9.91 Add component for product items and html ->product-item.ts-->
 <div class="card h-100 shadow-sm">
-  <!--9.92.1 Adjust html ->-->
+  <!--9.92.1 Adjust html -> brands.ts-->
   <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-info">
   <div class="card-body d-flex flex-column">
     <a href="#">
