--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -10,36 +10,47 @@
   <div class="row">
     <section class="col-3">
       <h5 class="text-warning ml-3">Sort</h5>
-      <select class="custom-select mb-3">
-        <option>Alphabetical</option>
-        <option>Price: Low to High</option>
-        <option>Price: High to Low</option>
+      <!--9.96.2 Add sorting html ->shared.module.ts-->
+      <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+        <option *ngFor="let sort of sortOptions" [value]="sort.value">
+          {{sort.name}}
+        </option>
       </select>
+
+      <!--9.93.4 add html for brands and types ->shop.service.ts-->
+      <!--9.95 Add html for filters and types -> shop.component.ts-->
       <h5 class="text-warning ml-3">Brands</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item active" aria-current="true">An active item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
+        <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === this.shopParams.brandId"
+          [value]="brand.id" (click)="onBrandSelected(brand.id)">
+          {{brand.name}}
+        </li>
       </ul>
 
       <h5 class="text-warning ml-3">Types</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item active" aria-current="true">An active item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
+        <li class="list-group-item" *ngFor="let type of types" [class.active]="type.id === this.shopParams.typeId"
+          [value]="type.id" (click)="onTypeSelected(type.id)">
+          {{type.name}}
+        </li>
       </ul>
     </section>
 
 
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
+        <!--9.100 Add html for pagination header ->-->
         <header>
-          <span>
-            Showing <strong>10</strong> of <strong>16</strong> Results
+          <span *ngIf="totalCount && totalCount > 0">
+            Showing 
+            <strong>{{(this.shopParams.pageNumber - 1) * this.shopParams.pageSize + 1}} - 
+              {{this.shopParams.pageNumber * this.shopParams.pageSize 
+              > this.totalCount ? this.totalCount : this.shopParams.pageNumber * this.shopParams.pageSize}}
+            </strong> 
+            of <strong>{{this.totalCount}}</strong> Results
+          </span>
+          <span *ngIf="totalCount === 0">
+            There are <strong>0</strong> results for this filter
           </span>
         </header>
         <div class="form-inline mt-2">
@@ -53,6 +64,21 @@
         <div class="col-4 mb-4" *ngFor="let item of products">
           <app-product-item [product]="item"></app-product-item>
         </div>
+      </div>
+      <!--9.97.2 add html for pagination ->shopParams.ts-->
+      <!--9.98.4 change pagination html -> shop.service.ts-->
+      <!--9.99.2 add html for paging -> -->
+      <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
+      <pagination 
+      [boundaryLinks]="true" 
+      [totalItems]="this.totalCount"
+      (pageChanged)="onPageChanged($event)"
+      [itemsPerPage]="this.shopParams.pageSize"
+      previousText="&lsaquo;" 
+      nextText="&rsaquo;"
+      firstText="&laquo;" 
+      lastText="&raquo;">
+      </pagination>
       </div>
     </section>
   </div>
