--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -39,8 +39,8 @@
 
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
-        <!--9.100 Add html for pagination header ->-->
-        <header>
+        <!--9.100 Add html for pagination header -> paging-header.html-->
+        <!--<header>
           <span *ngIf="totalCount && totalCount > 0">
             Showing 
             <strong>{{(this.shopParams.pageNumber - 1) * this.shopParams.pageSize + 1}} - 
@@ -52,7 +52,13 @@
           <span *ngIf="totalCount === 0">
             There are <strong>0</strong> results for this filter
           </span>
-        </header>
+        </header> -->
+        <!--9.101.4 add paging hader and pass parametres-->
+        <app-paging-header>
+          [totalCount]="totalCount"
+          [pageSize]="this.shopParams.pageSize"
+          [pageNumber]="this.shopParams.pageNumber"
+        </app-paging-header>
         <div class="form-inline mt-2">
           <input type="text" style="width: 300px;" placeholder="Search" class="form-control mr-2">
           <button class="btn btn-outline-primary my-2">Search</button>
