--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,5 +3,7 @@
 <!--8.79.1 Add html ->app.module.ts-->
 <div class="container" style="margin-top: 140px;">
     <!--8.80.1 Add code for showing products -> -->
-    <app-shop></app-shop>
+    <!--<app-shop></app-shop>-->
+    <!--10.108.3 Add router-outlet ->-->
+    <router-outlet></router-outlet>
 </div>
