--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,6 +4,6 @@
 <div class="container" style="margin-top: 140px;">
     <!--8.80.1 Add code for showing products -> -->
     <!--<app-shop></app-shop>-->
-    <!--10.108.3 Add router-outlet ->-->
+    <!--10.108.3 Add router-outlet ->nav.bar.component.html-->
     <router-outlet></router-outlet>
 </div>
