--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,11 +1,15 @@
 <!--8.78 Add navbar html -> css-->
 <div class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 
 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed">
-    <img src="/assets/images/logo.png" style="max-height: 70px;" alt="logo">
+    <img src="/assets/images/logo.png" style="max-height: 70px;" alt="logo" routerLink="/" class="logo">
     <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;">
-      <a class="p-2 text-dark" href="#">Home</a>
-      <a class="p-2 text-dark" href="#">Shop</a>
-      <a class="p-2 text-dark" href="#">Contact</a>
+      <!--10.109 add tags for components -> product-item.html
+          10.110.1 link is active when its a match so it does not activate both ->nav-bar.css
+      -->
+      <a class="p-2" [routerLink]="['/']" routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact: true}">Home</a>
+      <a class="p-2" routerLink="/shop" routerLinkActive="active">Shop</a>
+      <a class="p-2" >Contact</a>
     </nav>
     <div class="d-flex align-items-center">
         <a class="position-relative">
