--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -3,7 +3,7 @@
   <!--9.92.1 Adjust html -> brands.ts-->
   <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-info">
   <div class="card-body d-flex flex-column">
-    <a href="#">
+    <a routerLink="/shop/{{product.id}}">
       <h6 class="text-uppercase">{{product.name}}</h6>
     </a>
     <span class="mb-2">{{product.price | currency}}</span>
@@ -11,7 +11,8 @@
 
       <div class="btn-group mt-auto">
         <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-        <button type="button" class="btn btn-outline-secondary">View</button>
+        <!--10.109.1 add router link ->nav.bar.component.css-->
+        <button routerLink="/shop/{{product.id}}" type="button" class="btn btn-outline-secondary">View</button>
       </div>
   </div>
 </div>
