Frontend error handeling

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -9,7 +9,8 @@ px-md-4 mb-3 bg-white border-bottom shadow-sm fixed">
       <a class="p-2" [routerLink]="['/']" routerLinkActive="active"
           [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a class="p-2" routerLink="/shop" routerLinkActive="active">Shop</a>
-      <a class="p-2" >Contact</a>
+      <!--11.116.2 Add html for errors ->test-error.ts-->
+      <a class="p-2" routerLink="/test-error" routerLinkActive="active">Errors</a>
     </nav>
     <div class="d-flex align-items-center">
         <a class="position-relative">
