--- a/client/src/app/core/test-error/test-error.component.html
+++ b/client/src/app/core/test-error/test-error.component.html
@@ -4,4 +4,10 @@
     <button (click)="get404Error()" class="btn btn-outline-primary mr-3">Test 404</button>
     <button (click)="get400Error()" class="btn btn-outline-primary mr-3">Test 400</button>
     <button (click)="get400ValidationError()" class="btn btn-outline-primary mr-3">Test 400V</button>
+    <!--11.120.2 add html -> error.interceptor.ts-->
+    <div class="row mt-5" *ngIf="validationErrors">
+        <ul class="text-danger">
+            <li *ngFor="let error of validationErrors">{{error}}</li>
+        </ul>
+    </div>
 </div>
