Added bootswatch and new theme

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--8.77.1 Add nav bar tag ->nav-bar.html-->
 <app-nav-bar></app-nav-bar>
+<!--12.124.1 Add html for section ->core.module.ts-->
+<app-section-header></app-section-header>
 <!--8.79.1 Add html ->app.module.ts-->
-<div class="container" style="margin-top: 140px;">
+<div class="container">
     <!--8.80.1 Add code for showing products -> -->
     <!--<app-shop></app-shop>-->
     <!--10.108.3 Add router-outlet ->nav.bar.component.html-->
