--- a/client/src/app/core/server-error/server-error.component.html
+++ b/client/src/app/core/server-error/server-error.component.html
@@ -1,5 +1,5 @@
 <!--11.117 Add test html for component -> not-found.html-->
-<!--11.121.2 add more html ->-->
+<!--11.121.2 add more html -> section-header.html-->
 <div class="container mt-5">
     <h4>Internal Sever error - refrshing the page will make exeption disappear</h4>
     <ng-container *ngIf="error">
