--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,18 +1,21 @@
 <!--9.91 Add component for product items and html ->product-item.ts-->
 <div class="card h-100 shadow-sm">
-  <!--9.92.1 Adjust html -> brands.ts-->
-  <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-info">
+  <!--12.128.2 add div for img and buttons ->-->
+  <div class="image position-relative" style="cursor: pointer;">
+    <!--9.92.1 Adjust html -> brands.ts-->
+    <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-info">
+    <!--12.128 Add div for better html -> product-items.scss-->
+    <div class="d-flex align-items-center justify-content-center hover-overlay">
+      <button type="button" class="btn btn-primary fa fa-shopping-cart mr-2"></button>
+      <!--10.109.1 add router link ->nav.bar.component.css-->
+      <button routerLink="/shop/{{product.id}}" type="button" class="btn btn-primary">View</button>
+    </div>
+  </div>
+
   <div class="card-body d-flex flex-column">
     <a routerLink="/shop/{{product.id}}">
       <h6 class="text-uppercase">{{product.name}}</h6>
     </a>
     <span class="mb-2">{{product.price | currency}}</span>
-
-
-      <div class="btn-group mt-auto">
-        <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-        <!--10.109.1 add router link ->nav.bar.component.css-->
-        <button routerLink="/shop/{{product.id}}" type="button" class="btn btn-outline-secondary">View</button>
-      </div>
   </div>
 </div>
