--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -6,7 +6,7 @@
 </ul>-->
 
 <!--9.90 -> add better html ->product-tem.html-->
-<div class="container">
+<div class="container mt-5">
   <div class="row">
     <section class="col-3">
       <h5 class="text-warning ml-3">Sort</h5>
