Changing some html

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,7 @@
+<!--12.130.2 Add tag for spinner ->busy.service.ts-->
+<ngx-spinner>
+    <h3>Loading...</h3>
+</ngx-spinner>
 <!--8.77.1 Add nav bar tag ->nav-bar.html-->
 <app-nav-bar></app-nav-bar>
 <!--12.124.1 Add html for section ->core.module.ts-->
