--- a/client/src/app/core/section-header/section-header.component.html
+++ b/client/src/app/core/section-header/section-header.component.html
@@ -1,12 +1,11 @@
 <!--12.124 Add html for section -> app.component.html-->
 <!--12.127.1 Add to the front end ->product-item.html-->
 <ng-container *ngIf="(breadcrumb$ | async) as breadcrumbs">
-  <section *ngIf="breadcrumbs.length > 0 && breadcrumbs[breadcrumbs.length -1].label != 'Home'" 
-      class="py-5" style="margin-top: 10px; background-color: #f5f5f5;">
+  <section *ngIf="breadcrumbs.length > 0 && breadcrumbs[breadcrumbs.length-1].label !== 'Home'" class="py-5" style="margin-top: 105px; background-color: #f5f5f5;">
     <div class="container">
       <div class="row d-flex align-items-center">
         <div class="col-9">
-          <h1>{{breadcrumbs.length > 0 && breadcrumbs[breadcrumbs.length -1].label | titlecase}}</h1>
+          <h1>{{breadcrumbs.length > 0 && breadcrumbs[breadcrumbs.length-1].label | titlecase}}</h1>
         </div>
         <div class="col-3">
           <!--12.125.2 Add tag for breadcrums ->app-routing.module.ts-->
