--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -8,32 +8,36 @@
 <!--9.90 -> add better html ->product-tem.html-->
 <div class="container mt-5">
   <div class="row">
+    
     <section class="col-3">
-      <h5 class="text-warning ml-3">Sort</h5>
-      <!--9.96.2 Add sorting html ->shared.module.ts-->
-      <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
-        <option *ngFor="let sort of sortOptions" [value]="sort.value">
-          {{sort.name}}
-        </option>
-      </select>
+      <!--12.131 add ng if only to show if there is types and brands -->
+      <ng-container *ngIf="types && brands">
+        <h5 class="text-warning ml-3">Sort</h5>
+        <!--9.96.2 Add sorting html ->shared.module.ts-->
+        <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+          <option *ngFor="let sort of sortOptions" [value]="sort.value">
+            {{sort.name}}
+          </option>
+        </select>
 
-      <!--9.93.4 add html for brands and types ->shop.service.ts-->
-      <!--9.95 Add html for filters and types -> shop.component.ts-->
-      <h5 class="text-warning ml-3">Brands</h5>
-      <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === this.shopParams.brandId"
-          [value]="brand.id" (click)="onBrandSelected(brand.id)">
-          {{brand.name}}
-        </li>
-      </ul>
+        <!--9.93.4 add html for brands and types ->shop.service.ts-->
+        <!--9.95 Add html for filters and types -> shop.component.ts-->
+        <h5 class="text-warning ml-3">Brands</h5>
+        <ul class="list-group my-3">
+          <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === this.shopParams.brandId"
+            [value]="brand.id" (click)="onBrandSelected(brand.id)">
+            {{brand.name}}
+          </li>
+        </ul>
 
-      <h5 class="text-warning ml-3">Types</h5>
-      <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let type of types" [class.active]="type.id === this.shopParams.typeId"
-          [value]="type.id" (click)="onTypeSelected(type.id)">
-          {{type.name}}
-        </li>
-      </ul>
+        <h5 class="text-warning ml-3">Types</h5>
+        <ul class="list-group my-3">
+          <li class="list-group-item" *ngFor="let type of types" [class.active]="type.id === this.shopParams.typeId"
+            [value]="type.id" (click)="onTypeSelected(type.id)">
+            {{type.name}}
+          </li>
+        </ul>
+      </ng-container>
     </section>
 
 
@@ -59,12 +63,14 @@
           [pageSize]="this.shopParams.pageSize"
           [pageNumber]="this.shopParams.pageNumber"
         </app-paging-header>
-        <div class="form-inline mt-2">
+        <!--12.131 add ng if only to show if there is types and brands ->shop.component.ts -->
+        <div class="form-inline mt-2" *ngIf="products">
           <!-- 9.103 add template reference in #search -> shop.componenet.ts
               9.103.2 add onClick() ->shop.service.ts
               9.103.4 add keyup event for enter functionality -> shop.componenet.ts
           -->
-          <input (keyup)="onSearch()" type="text" style="width: 300px;" #search placeholder="Search" class="form-control mr-2">
+          <input (keyup)="onSearch()" type="text" style="width: 300px;" #search placeholder="Search"
+            class="form-control mr-2">
           <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
           <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
         </div>
@@ -79,7 +85,7 @@
       <!--9.98.4 change pagination html -> shop.service.ts-->
       <!--9.99.2 add html for paging -> -->
       <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
-      <!--<pagination 
+        <!--<pagination 
       [boundaryLinks]="true" 
       [totalItems]="this.totalCount"
       (pageChanged)="onPageChanged($event)"
@@ -89,12 +95,9 @@
       firstText="&laquo;" 
       lastText="&raquo;">
       </pagination> -->
-      <!--9.102.3 add app-pager tag ->-->
-      <app-pager
-      [pageSize]="shopParams.pageSize"
-      [totalCount]="totalCount"
-      (pageChanged)="onPageChanged($event)"
-      ></app-pager>
+        <!--9.102.3 add app-pager tag ->-->
+        <app-pager [pageSize]="shopParams.pageSize" [totalCount]="totalCount" (pageChanged)="onPageChanged($event)">
+        </app-pager>
       </div>
     </section>
   </div>
