Changing some html and fixing errors

--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -1,4 +1,4 @@
-<!--12.131.3 Change css of product name and details ->-->
+<!--12.131.3 Change css of product name and details -> shared.module.ts-->
 <div class="container mt-5">
   <!--10.111.2 Add html -> product-details.html
 10.112 Add more details for product -> app-routing.module.ts-->
