--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,7 +7,8 @@
 <!--12.124.1 Add html for section ->core.module.ts-->
 <app-section-header></app-section-header>
 <!--8.79.1 Add html ->app.module.ts-->
-<div class="container">
+<!--12.132.4 Delete container -> shop.component.html-->
+<div>
     <!--8.80.1 Add code for showing products -> -->
     <!--<app-shop></app-shop>-->
     <!--10.108.3 Add router-outlet ->nav.bar.component.html-->
