Add basket module and uuid

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@ px-md-4 mb-3 bg-white border-bottom shadow-sm fixed">
       <a class="p-2" routerLink="/test-error" routerLinkActive="active">Errors</a>
     </nav>
     <div class="d-flex align-items-center">
-        <!--14.144.3 Add tag to test the module ->-->
+        <!--14.144.3 Add tag to test the module -> basket.ts-->
         <a routerLink="/basket" class="position-relative">
             <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
             <div class="cart-no">5</div>
