--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -6,7 +6,8 @@
     <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-info">
     <!--12.128 Add div for better html -> product-items.scss-->
     <div class="d-flex align-items-center justify-content-center hover-overlay">
-      <button type="button" class="btn btn-primary fa fa-shopping-cart mr-2"></button>
+      <!--14.149.1 Adding html for adding product to basket -> app.component.ts -->
+      <button (click)="addItemToBasket()" type="button" class="btn btn-primary fa fa-shopping-cart mr-2"></button>
       <!--10.109.1 add router link ->nav.bar.component.css-->
       <button routerLink="/shop/{{product.id}}" type="button" class="btn btn-primary">View</button>
     </div>
