--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -15,8 +15,9 @@ px-md-4 mb-3 bg-white border-bottom shadow-sm fixed">
     <div class="d-flex align-items-center">
         <!--14.144.3 Add tag to test the module -> basket.ts-->
         <a routerLink="/basket" class="position-relative">
+            <!--14.151.1 Displaying actual number of ites -> basket.component.ts -->
             <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-            <div class="cart-no">5</div>
+            <div *ngIf="(basket$ | async) as basket" class="cart-no">{{basket.items.length}}</div>
         </a>
         <a class="btn btn-outline-secondary mr-2">Login</a>
         <a class="btn btn-outline-secondary mr-3">Sign up</a>
