Adding checkout logic

--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -49,15 +49,16 @@
                     <td class="align-middle"><strong>{{item.price | currency}}</strong></td>
                     <td class="align-middle">
                       <div class="d-flex align-items-center">
-                        <i class="fa fa-minus-circle text-warning mr-2" style="cursor: pointer; font-size: 2em;"></i>
-                        <span class="font-weight-bold" style="font-size: 1.5em;">{{item.quantity}}</span>
-                        <i class="fa fa-plus-circle text-warning mx-2" style="cursor: pointer; font-size: 2em;"></i>
+                         <!--14.156.1 Add methods to the html -> product-details.ts-->
+                        <i (click)="decrementItemQuantity(item)" class="fa fa-minus-circle text-warning mr-2" style="cursor: pointer; font-size: 2em;"></i>
+                        <span class="font-weight-bold" style="font-size: 1.5em;">{{item.quantity}}</span>                 
+                        <i (click)="incrementItemQuantity(item)" class="fa fa-plus-circle text-warning mx-2" style="cursor: pointer; font-size: 2em;"></i>
                       </div>
                     </td>
                     <td class="align-middle"><strong>{{item.price * item.quantity | currency}}</strong></td>
                     <td class="align-middle text-center">
                       <a class="text-danger">
-                        <i class="fa fa-trash" style="font-size: 2pm;"></i>
+                        <i (click)="removeBasketItem(item)" class="fa fa-trash" style="font-size: 2pm; cursor: pointer;"></i>
                       </a>
                     </td>
                   </tr>
@@ -71,6 +72,7 @@
           <div class="col-6 offset-6">
             <app-order-totals>
             </app-order-totals>
+            <!--14.158.3 add chechout to html ->checkout.html-->
             <a routerLink="/checkout" class="btn btn-outline-primary py-2 btn-block">
               Proceed to checkout
             </a>
