Adding Identity classes and properties

--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<!--14.158.4 change html ->-->
+<!--14.158.4 change html ->AppUser-->
 <div class="container mt-5">
     <h1>Only authorized users can see this</h1>
 </div>
