--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -16,7 +16,7 @@ px-md-4 mb-3 bg-white border-bottom shadow-sm fixed">
     <a routerLink="/basket" class="position-relative">
       <!--14.151.1 Displaying actual number of ites -> basket.component.ts -->
       <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-      <!--17.192.1 Add user to the html ->-->
+      <!--17.192.1 Add user to the html ->account.service.ts-->
       <div *ngIf="(basket$ | async)" class="cart-no">{{(basket$ | async).items.length}}</div>
     </a>
     <!--17.192.1-->
