--- a/client/src/app/account/login/login.component.html
+++ b/client/src/app/account/login/login.component.html
@@ -1,23 +1,14 @@
-<!--17.188 Creating a login form -> shared.module.ts -->
 <div class="d-flex justify-content-center mt-5">
-    <div class="col-3">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-signin">
-            <div class="text-center mb- 4">
-              <h1 class="h3 mb-3 fw-normal">Login</h1>
-            </div>
-          
-            <div class="form-label-group">
-              <input formControlName="email" type="email" class="form-control" id="email" placeholder="Email address">
-              <label for="floatingInput">Email address</label>
-            </div>
-          
-            <div class="form-label-group">
-              <input formControlName="password" type="password" class="form-control" id="password" placeholder="Password">
-              <label for="floatingPassword">Password</label>
-            </div>
-          
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-          </form>
-    </div>
-</div>
+  <div class="col-3">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="text-center mb-4">
+        <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+      </div>
 
+      <app-text-input formControlName="email" [label]="'Email Address'"></app-text-input>
+      <app-text-input formControlName="password" [label]="'Password'" [type]="'password'"></app-text-input>
+     
+      <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+  </div>
+</div>
