--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -28,8 +28,25 @@ px-md-4 mb-3 bg-white border-bottom shadow-sm fixed">
 
     <!--17.192.1-->
     <ng-container *ngIf="currentUser$ | async">
-    <a href="#">Welcome {{(currentUser$ | async).displayName}}</a>
-
+      <!--17.194.2 Add dropdown html -> nav-bar.component.ts-->
+      <div class="dropdown ml-3 mr-5" dropdown>
+        <a class="dropdown-toggle" style="cursor: pointer;" dropdownToggle>
+          <strong>Welcome {{(currentUser$ | async).displayName}}</strong>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" style="cursor: pointer;" *dropdownMenu>
+          <a routerLink="/basket" routerLinkActive="router-link-active"  class="dropdown-item d-flex align-items-center py-2">
+            <i class="fa fa-shopping-cart mr-3"></i> View Basket
+          </a>
+          <a routerLink="/orders" class="dropdown-item d-flex align-items-center py-2">
+            <i class="fa fa-shopping-cart mr-3"></i> View Order
+          </a>
+          <div class="dropdown-divider"></div>
+          <!--17.194.5 Add logout() ->login.component.html-->
+          <a (click)="logout()" class="dropdown-item d-flex align-items-center py-2">
+            <i class="fa fa-shopping-cart mr-3"></i> Logout
+          </a>
+        </div>
+      </div>
     </ng-container>
   </div>
 
