Adding jwt interceptor for the delivery methods

--- a/client/src/app/checkout/checkout-address/checkout-address.component.html
+++ b/client/src/app/checkout/checkout-address/checkout-address.component.html
@@ -1,3 +1,4 @@
+<!--19.234.1 Add html elements -> deliveryMethod.ts-->
 <div class="mt-4" [formGroup]="checkoutForm">
     <div class="d-flex justify-content-between align-items-center">
         <h4>Shipping address</h4>
