Adding the review of the order

--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -1,1 +1,5 @@
-<p>checkout-review works!</p>
+<!--19.239. Add html for summary ->basket-summary.component.ts-->
+<div class="mt-4">
+    <!--19.239.3 Send the isBasket to the review -> basket-summary.html-->
+    <app-basket-summary [isBasket]=false></app-basket-summary>
+</div>
