Getting and updating delivery address

--- a/client/src/app/checkout/checkout-address/checkout-address.component.html
+++ b/client/src/app/checkout/checkout-address/checkout-address.component.html
@@ -31,12 +31,12 @@
         </div>
     </div>
 </div>
-
+<!--19.240 Adding buttons to move between stepper elements -> checkout-delivery.component.html-->
 <div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
     <button class="btn btn-outline-primary" routerLink="/basket">
         <i class="fa fa-angle-left"></i> Back to Basket
     </button>
-    <button [disabled]="checkoutForm.get('addressForm').invalid" class="btn btn-primary" cdkStepperNext>
+    <button class="btn btn-primary" cdkStepperNext>
         Go to Delivery <i class="fa fa-angle-right"></i> 
     </button>
 </div>
