--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -16,3 +16,12 @@
         </div>
     </div>
 </div>
+<!--19.240.1 Add back and forward buttons -> checkout-review.component.html-->
+<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
+    <button class="btn btn-outline-primary" cdkStepperPrevious>
+        <i class="fa fa-angle-left"></i> Back to Address
+    </button>
+    <button class="btn btn-primary" cdkStepperNext>
+        Go to Review <i class="fa fa-angle-right"></i> 
+    </button>
+</div>
