--- a/client/src/app/shared/components/basket-summary/basket-summary.component.html
+++ b/client/src/app/shared/components/basket-summary/basket-summary.component.html
@@ -4,7 +4,7 @@
         <table class="table">
           <thead>
             <tr>
-              <!--19.239.4 Add conditional css classes [class.bg-light]="isBasket" ->-->
+              <!--19.239.4 Add conditional css classes [class.bg-light]="isBasket" ->checkout-address.component.html-->
               <th class="border-0" [class.bg-light]="isBasket" scope="col">
                 <div class="p-2 px-3 text-uppercase">Product</div>
               </th>
