--- a/client/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/client/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -1,1 +1,9 @@
-<p>checkout-payment works!</p>
+<!--19.240.3 Add back and forward buttons ->checkout.component.html-->
+<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
+    <button class="btn btn-outline-primary" cdkStepperPrevious>
+        <i class="fa fa-angle-left"></i> Back to Review
+    </button>
+    <button class="btn btn-primary">
+        Submit Order <i class="fa fa-angle-right"></i> 
+    </button>
+</div>
