--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -3,3 +3,12 @@
     <!--19.239.3 Send the isBasket to the review -> basket-summary.html-->
     <app-basket-summary [isBasket]=false></app-basket-summary>
 </div>
+<!--19.240.2 Add back and forward buttons -> checkout-payment.component.html-->
+<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
+    <button class="btn btn-outline-primary" cdkStepperPrevious>
+        <i class="fa fa-angle-left"></i> Back to Delivery
+    </button>
+    <button class="btn btn-primary" cdkStepperNext>
+        Go to Payment <i class="fa fa-angle-right"></i> 
+    </button>
+</div>
