--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -1,7 +1,9 @@
 <!--19.239. Add html for summary ->basket-summary.component.ts-->
 <div class="mt-4">
     <!--19.239.3 Send the isBasket to the review -> basket-summary.html-->
-    <app-basket-summary [isBasket]=false></app-basket-summary>
+    <app-basket-summary 
+    [isBasket]=false
+    ></app-basket-summary>
 </div>
 <!--19.240.2 Add back and forward buttons -> checkout-payment.component.html-->
 <div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
