--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -15,13 +15,19 @@
             (decrement)="decrementItemQuantity($event)"
             (increment)="incrementItemQuantity($event)"
             (remove)="removeBasketItem($event)"
+            [items]="(basket$ | async).items"
             ></app-basket-summary>
           </div>
         </div>
         <!--14.154.4 Adding the html ->basket.service.ts -->
         <div class="row">
           <div class="col-6 offset-6">
-            <app-order-totals>
+            <app-order-totals
+            *ngIf="(basketTotals$ | async)"
+            [shippingPrice]="(basketTotals$ | async).shipping"
+            [subtotal]="(basketTotals$ | async).subtotal" 
+            [total]="(basketTotals$ | async).total">
+            >
             </app-order-totals>
             <!--14.158.3 add chechout to html ->checkout.html-->
             <a routerLink="/checkout" class="btn btn-outline-primary py-2 btn-block">
