--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -1,9 +1,13 @@
 <!--19.236 Add html for delivery ->-->
 <div class="mt-4" [formGroup]="checkoutForm">
-    <div class="row" formGroupName="deliveryForm">
+    <h4 class="mb-3">Choose your delivery method</h4>
+    <div class="row ml-5" formGroupName="deliveryForm">
         <div class="col-6 form-group" *ngFor="let method of deliveryMethods">
+            <!--19.244.2 Add onClick to readio buttons to update total 
+                when delivery method is clicked -> order.ts-->
             <input type="radio"
                 id="{{method.id}}"
+                (click)="setShippingPrice(method)"
                 value="{{method.id}}"
                 formControlName="deliveryMethod"
                 class="custom-control-input"
