--- a/client/src/app/checkout/checkout-success/checkout-success.component.html
+++ b/client/src/app/checkout/checkout-success/checkout-success.component.html
@@ -1,1 +1,7 @@
-<p>checkout-success works!</p>
+<!--19.248.1 Add html elements -> checkout-success.component.ts-->
+<div class="container mt-5">
+    <div><i class="fa fa-check-circle fa-5x" style="color: green;"></i></div>
+    <h2>Thank you your order is confirmed</h2>
+    <p class="mb-4">Your order has not shipped yet, but this is to be expected as we are a real store</p>
+    <button class="btn btn-outline-success">View your order</button>
+</div>
