--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -28,8 +28,8 @@
                 <cdk-step [label]="'Review'">
                     <app-checkout-review></app-checkout-review>
                 </cdk-step>
-                <cdk-step [label]="'Payment'">
-                    <app-checkout-payment></app-checkout-payment>
+                <cdk-step [label]="'Payment'" >
+                    <app-checkout-payment [checkoutForm]="checkoutForm"></app-checkout-payment>
                 </cdk-step>
             </app-stepper>
         </div>
