--- a/client/src/app/shared/components/basket-summary/basket-summary.component.html
+++ b/client/src/app/shared/components/basket-summary/basket-summary.component.html
@@ -1,6 +1,7 @@
 <!--19.238 Creating a component for basket summary 
     as shared component (ng g c basket-summary --skip-tests) ->shared.module.ts-->
-    <div class="table-responsive">
+    <ng-container *ngIf="basket$ | async">
+      <div class="table-responsive">
         <table class="table">
           <thead>
             <tr>
@@ -58,3 +59,4 @@
           </tbody>
         </table>
       </div>
+    </ng-container>
