--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -3,6 +3,7 @@
     <!--19.239.3 Send the isBasket to the review -> basket-summary.html-->
     <app-basket-summary 
     [isBasket]=false
+    [items]="(basket$ | async).items"
     ></app-basket-summary>
 </div>
 <!--19.240.2 Add back and forward buttons -> checkout-payment.component.html-->
