--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -34,7 +34,13 @@
             </app-stepper>
         </div>
         <div class="col-4">
-            <app-order-totals></app-order-totals>
+            <!--20.253.6 Adding new vars into checkout -> order-detailed.component.ts--> 
+            <app-order-totals
+                *ngIf="(basketTotals$ | async)"
+                [shippingPrice]="(basketTotals$ | async).shipping"
+                [subtotal]="(basketTotals$ | async).subtotal"
+                [total]="(basketTotals$ | async).total"
+            ></app-order-totals>
         </div>
     </div>
 </div>
