--- a/client/src/app/shared/components/stepper/stepper.component.html
+++ b/client/src/app/shared/components/stepper/stepper.component.html
@@ -6,7 +6,7 @@
             <button 
                 (click)="onClick(i)"
                 [class.active]="selectedIndex === i"
-                class="nav-link py-3 text-uppercase font-weight-bold btn-block">
+                class="nav-link text-uppercase font-weight-bold btn-block" style="padding: 1.20.em;">
                 {{step.label}}
             </button>
         </li>
