Adding payment intent on front end

--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -11,7 +11,8 @@
     <button class="btn btn-outline-primary" cdkStepperPrevious>
         <i class="fa fa-angle-left"></i> Back to Delivery
     </button>
-    <button class="btn btn-primary" cdkStepperNext>
+    <!--21.263.2 Add createPaymentIntent() for testing ->-->
+    <button class="btn btn-primary" (click)="createPaymentIntent()">
         Go to Payment <i class="fa fa-angle-right"></i> 
     </button>
 </div>
