Adding stripe validation for card

--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -11,7 +11,7 @@
     <button class="btn btn-outline-primary" cdkStepperPrevious>
         <i class="fa fa-angle-left"></i> Back to Delivery
     </button>
-    <!--21.263.2 Add createPaymentIntent() for testing ->-->
+    <!--21.263.2 Add createPaymentIntent() for testing -> basket.ts-->
     <button class="btn btn-primary" (click)="createPaymentIntent()">
         Go to Payment <i class="fa fa-angle-right"></i> 
     </button>
