--- a/client/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/client/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -1,4 +1,24 @@
-
+<!--21.265.1 Add html -> checkout-payment.ts-->
+<div class="mt-4" [formGroup]="checkoutForm">
+    <div class="row">
+        <div class="form-group col-12" formGroupName="paymentForm">
+            <app-text-input [label]="'Name on card'" formControlName="nameOnCard"></app-text-input>
+        </div>
+        <div class="form-group col-6">
+            <div #cardNumber class="form-control py-3"></div>
+            <!--21.267.1 Add html for the errors ->-->
+            <ng-container *ngIf="cardErrors">
+                <span class="text-danger">{{cardErrors}}</span>
+            </ng-container>
+        </div>
+        <div class="form-group col-3">
+            <div #cardExpiry class="form-control py-3"></div>
+        </div>
+        <div class="form-group col-3">
+            <div #cardCvc class="form-control py-3"></div>
+        </div>
+    </div>
+</div>
 <!--19.240.3 Add back and forward buttons ->checkout.component.html-->
 <div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
     <button class="btn btn-outline-primary" cdkStepperPrevious>
