--- a/client/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/client/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="form-group col-6">
             <div #cardNumber class="form-control py-3"></div>
-            <!--21.267.1 Add html for the errors ->-->
+            <!--21.267.1 Add html for the errors ->checkout-review.ts-->
             <ng-container *ngIf="cardErrors">
                 <span class="text-danger">{{cardErrors}}</span>
             </ng-container>
