--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -25,7 +25,10 @@
     <button class="btn btn-outline-primary" cdkStepperPrevious>
         <i class="fa fa-angle-left"></i> Back to Address
     </button>
-    <button class="btn btn-primary" cdkStepperNext>
+    <!--21.274.2 Disabeling the button -> checkout-adress.ts-->
+    <button [disabled]="checkoutForm.get('deliveryForm').invalid" 
+    class="btn btn-primary" 
+    cdkStepperNext>
         Go to Review <i class="fa fa-angle-right"></i> 
     </button>
 </div>
