--- a/client/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/client/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -24,7 +24,10 @@
     <button class="btn btn-outline-primary" cdkStepperPrevious>
         <i class="fa fa-angle-left"></i> Back to Review
     </button>
-    <button class="btn btn-primary" (click)="submitOrder()">
-        Submit Order <i class="fa fa-angle-right"></i> 
+    <!--21.273.1 Disable the button if loading indicator is turned on ->checkout.component.html-->
+    <button [disabled]="loading" class="btn btn-primary" (click)="submitOrder()">
+        Submit Order <i class="fa fa-angle-right"></i>
+        <!--21.273.1 adding a spiner-->
+        <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
     </button>
 </div>
