--- a/client/src/app/shared/components/stepper/stepper.component.html
+++ b/client/src/app/shared/components/stepper/stepper.component.html
@@ -3,8 +3,12 @@
 <div class="container">
     <ul class="nav nav-pills nav-justified">
         <li class="nav-item" *ngFor="let step of steps; let i = index">
+            <!--21.274.4 Disabeling the stepper 
+                nav-bar thus forcing the user to use 
+                buttons when moving through form [disabled]="true" -> stepper.css-->
             <button 
                 (click)="onClick(i)"
+                [disabled]="true"
                 [class.active]="selectedIndex === i"
                 class="nav-link text-uppercase font-weight-bold btn-block" style="padding: 1.20.em;">
                 {{step.label}}
