--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -15,7 +15,11 @@
         <h5 class="text-warning ml-3 mt-4 mb-3">Sort</h5>
         <!--9.96.2 Add sorting html ->shared.module.ts-->
         <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
-          <option *ngFor="let sort of sortOptions" [value]="sort.value">
+          <!--21.285.7 Add selected value for sort in html 
+            [selected]="shopParams.sort === sort.value" -> shop.component.scss-->
+          <option *ngFor="let sort of sortOptions" 
+          [selected]="shopParams.sort === sort.value"
+          [value]="sort.value">
             {{sort.name}}
           </option>
         </select>
@@ -99,7 +103,12 @@
       lastText="&raquo;">
       </pagination> -->
         <!--9.102.3 add app-pager tag ->-->
-        <app-pager [pageSize]="shopParams.pageSize" [totalCount]="totalCount" (pageChanged)="onPageChanged($event)">
+        <!--21.285.5 Add page number to shop component -> shop.component.ts-->
+        <app-pager 
+        [pageSize]="shopParams.pageSize" 
+        [totalCount]="totalCount" 
+        [pageNumber]="shopParams.pageNumber"
+        (pageChanged)="onPageChanged($event)">
         </app-pager>
       </div>
     </section>
